--- a/Anytime Scratch/MainMenu.xib
+++ b/Anytime Scratch/MainMenu.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14109" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14109"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,16 +14,16 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
-        <window title="Anytime Scratch" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" oneShot="NO" releasedWhenClosed="NO" showsToolbarButton="NO" frameAutosaveName="" animationBehavior="default" id="xnE-uO-Mfq">
+        <window title="Anytime Scratch" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" frameAutosaveName="" animationBehavior="default" id="xnE-uO-Mfq">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES"/>
             <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
             <rect key="contentRect" x="163" y="199" width="595" height="436"/>
             <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-            <view key="contentView" misplaced="YES" id="aLd-4h-K0m">
+            <view key="contentView" id="aLd-4h-K0m">
                 <rect key="frame" x="0.0" y="0.0" width="595" height="436"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <customView misplaced="YES" id="abT-YY-zLE" customClass="TurnTableView">
+                    <customView id="abT-YY-zLE" customClass="TurnTableView">
                         <rect key="frame" x="91" y="66" width="353" height="322"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                     </customView>
@@ -45,7 +45,7 @@
                             <action selector="inputDeviceSelected:" target="n2f-hl-4nw" id="cSM-rr-EH5"/>
                         </connections>
                     </popUpButton>
-                    <popUpButton verticalHuggingPriority="750" misplaced="YES" id="MtA-hY-hor">
+                    <popUpButton verticalHuggingPriority="750" id="MtA-hY-hor">
                         <rect key="frame" x="384" y="400" width="194" height="26"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <popUpButtonCell key="cell" type="push" title="Item 1" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="V3I-ed-4PJ" id="Yse-i0-utJ">
@@ -60,7 +60,7 @@
                             </menu>
                         </popUpButtonCell>
                     </popUpButton>
-                    <button misplaced="YES" id="Jt7-bE-Vlt">
+                    <button id="Jt7-bE-Vlt">
                         <rect key="frame" x="396" y="352" width="79" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="check" title="Slip" bezelStyle="regularSquare" imagePosition="left" inset="2" id="pyh-Xb-8FY">
@@ -71,7 +71,7 @@
                             <action selector="slipChanged:" target="n2f-hl-4nw" id="DpN-pF-nhG"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="EsW-Pj-839">
+                    <button verticalHuggingPriority="750" id="EsW-Pj-839">
                         <rect key="frame" x="390" y="311" width="89" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="Loop" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="RWv-H5-M9S">
@@ -82,7 +82,7 @@
                             <action selector="loopClicked:" target="n2f-hl-4nw" id="yWc-ae-oqv"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="X9r-sv-ZBW">
+                    <button verticalHuggingPriority="750" id="X9r-sv-ZBW">
                         <rect key="frame" x="461" y="348" width="88" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="[F]ollow" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="VaT-AX-7ge">
@@ -94,7 +94,7 @@
                             <action selector="followNow:" target="n2f-hl-4nw" id="XPc-j3-KCL"/>
                         </connections>
                     </button>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="oC8-EI-E5r">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="oC8-EI-E5r">
                         <rect key="frame" x="32" y="322" width="71" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="[TAB]" id="CCS-Xi-J0h">
@@ -103,7 +103,7 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="pNu-70-nw4">
+                    <button verticalHuggingPriority="750" id="pNu-70-nw4">
                         <rect key="frame" x="470" y="235" width="87" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="Reverse" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="cRW-54-Ih5">
@@ -114,7 +114,7 @@
                             <action selector="reverseClicked:" target="n2f-hl-4nw" id="5AH-IB-mdF"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="JYM-L6-IZE">
+                    <button verticalHuggingPriority="750" id="JYM-L6-IZE">
                         <rect key="frame" x="479" y="311" width="69" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="x 1/2" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="5ZP-Eg-8fP">
@@ -125,7 +125,7 @@
                             <action selector="loopX1_2Clicked:" target="n2f-hl-4nw" id="ifb-nc-1y5"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="RQ7-3g-ejR">
+                    <button verticalHuggingPriority="750" id="RQ7-3g-ejR">
                         <rect key="frame" x="479" y="289" width="69" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="x 1/4" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="imz-Il-Dbj">
@@ -136,7 +136,7 @@
                             <action selector="loopx1_4Cliked:" target="n2f-hl-4nw" id="7Cl-0H-wBn"/>
                         </connections>
                     </button>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="KzR-gb-gRA">
+                    <button verticalHuggingPriority="750" id="KzR-gb-gRA">
                         <rect key="frame" x="35" y="330" width="64" height="32"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <buttonCell key="cell" type="push" title="TAP" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="V4J-IC-9iT">
@@ -147,11 +147,11 @@
                             <action selector="tapClicked:" target="n2f-hl-4nw" id="R9M-by-Rjl"/>
                         </connections>
                     </button>
-                    <customView misplaced="YES" id="BIb-2k-0cX" customClass="RingView">
+                    <customView id="BIb-2k-0cX" customClass="RingView">
                         <rect key="frame" x="91" y="9" width="353" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                     </customView>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" misplaced="YES" id="0tN-8R-Nbx">
+                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" id="0tN-8R-Nbx">
                         <rect key="frame" x="32" y="359" width="71" height="17"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                         <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="120.00" id="n3C-8a-pF3">
@@ -160,7 +160,7 @@
                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                         </textFieldCell>
                     </textField>
-                    <button verticalHuggingPriority="750" misplaced="YES" id="MXn-wR-EHV">
+                    <button verticalHuggingPriority="750" id="MXn-wR-EHV">
                         <rect key="frame" x="463" y="66" width="101" height="92"/>
                         <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxY="YES"/>
                         <buttonCell key="cell" type="square" title="Table [S]top" bezelStyle="shadowlessSquare" alignment="center" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="kEd-8w-bf9">
@@ -789,7 +789,7 @@
                             <menuItem title="Show Sidebar" keyEquivalent="s" id="kIP-vf-haE">
                                 <modifierMask key="keyEquivalentModifierMask" control="YES" command="YES"/>
                                 <connections>
-                                    <action selector="toggleSourceList:" target="-1" id="iwa-gc-5KM"/>
+                                    <action selector="toggleSidebar:" target="-1" id="iwa-gc-5KM"/>
                                 </connections>
                             </menuItem>
                             <menuItem title="Enter Full Screen" keyEquivalent="f" id="4J7-dP-txa">
